# SOCP

./: .gitignore  DMS_OCP.py  DMS_SOCP.py  DMS_SOCP_anticipatory.py  DMS_SOCP_basic.py  README.md  animate_solution_transcriptions.py  dynamics.py  environment.yml  main_DMS.py  main_run.py  main_run_all_examples.py  main_run_analysis.py  main_run_analysis_transcriptions.py  pyproject.toml  run_arm_reaching.py  run_cart_pole.py  run_obstacle_avoidance.py  run_parabola.py  run_somersault.py  run_vertebrate.py  run_vertebrate_arm.py  save_results.py  table.tex  utils.py
.github/workflows/: run_tests.yml
SOCP/: __init__.py  utils.py
SOCP/deterministic/: deterministic_OCP.py  deterministic_animate.py  deterministic_arm_model.py  deterministic_plot.py  deterministic_save_results.py
SOCP/models/: arm_model.py
SOCP/stochastic_basic/: basic_arm_model.py  basic_save_results.py  basic_socp.py
SOCP/stochastic_delay/: basic_arm_model.py  basic_socp.py
examples/: arm_reaching.py
models/: LeuvenArmModel_bar.bioMod  LeuvenArmModel_circle.bioMod  leuven_arm_model.py
socp/: __init__.py  constraints.py  live_plot_utils.py  utils.py
socp/analysis/: covariance_integrator.py  (+3 more)
tests/: comparison_TRAP_MAC_implementations.py  obstacle_TRAP_MAC.py  test_arm_reaching.py  test_cholesky.py  test_covariance.py  test_obstacle_DCP_MAC.py  test_obstacle_DC_MAC.py  test_obstacle_DC_N.py  test_obstacle_DMS_MAC.py  test_obstacle_DMS_N.py  test_obstacle_TRAP_MAC.py  test_obstacle_VAR_N.py  test_variable_creation.py
transcriptions/: direct_multiple_shooting.py  noise_discretization.py
(+37 files in other folders)
