[build-system]
requires = [
    "setuptools>=61", 
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "socp"
description = "Stochastic Optimal Control transcriptions"
dynamic = ["version"]
authors = [
    {name = "EveCharbie", email = "eve.charbie@gmail.com"},
]
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "casadi",
]

[project.urls]
Documentation = "https://github.com/EveCharbie/SOCP/tree/main#readme"
Source = "https://github.com/EveCharbie/SOCP"
Tracker = "https://github.com/EveCharbie/SOCP/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["socp*"]

[tool.setuptools.dynamic]
version = { attr = "socp.version.__version__" }

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
